# outbox

./: Cargo.toml  docker-compose.yaml
src/: lib.rs  rabbit.rs
