[package]
name = "outbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amq-protocol-types = "7.0.1"
eyre = "0.6.8"
lapin = "2.1.1"
serde = "1.0.137"
serde_json = "1.0.81"
sqlx = { version = "0.5.13", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.18.2", features = ["macros"] }
